# pypi-jump-to

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  justfile  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yaml  dependency-review.yaml  linters.yaml  release.yaml  tests.yaml
src/: lib.rs  main.rs
src/commands/: jump.rs  mod.rs
src/handlers/: args.rs  metadata.rs  mod.rs
src/pjt/: __init__.py  core.py  pypi.py
src/pjt/api/: __init__.py  core.py  models.py
src/pjt/cli/: application.py  commands.py
src/pjt/core/: entities.py
src/pypi_jump_to/: __init__.py
src/python_jump_to/: __init__.py
tests/: conftest.py  pypi_api_tests.rs  test_pypi.py
tests/cli/: conftest.py  test_application.py
tests/core/: test_pypi.py
