[package]
name = "pypi-jump-to"
version = "1.0.0"
edition = "2024"
license = "MIT"
authors = ["Volodymyr Pivoshenko <volodymyr.pivoshenko@gmail.com>"]
description = "pypi-jump-to (pjt) - a quick navigation tool for the PyPI packages."
documentation = "https://github.com/pivoshenko/pypi-jump-to"
homepage = "https://github.com/pivoshenko/pypi-jump-to"
repository = "https://github.com/pivoshenko/pypi-jump-to"
readme = "README.md"
keywords = [
  "cli",
  "command-line",
  "developer-tools",
  "hacktoberfest",
  "jump",
  "jump-to",
  "maturin",
  "navigation",
  "pjt",
  "productivity",
  "pypi",
  "python",
  "search",
  "shortcuts"
]
categories = ["command-line-interface", "command-line-utilities", "development-tools"]

[[bin]]
name = "pjt"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.54", features = ["derive", "color"] }
serde = { version = "1.0.228", features = ["derive"] }
ureq = { version = "3.1.4", features = ["json", "rustls"], default-features = false }
serde_json = "1.0.148"
console = "0.16.1"
open = "5.3.3"

[dev-dependencies]
mockito = "1.7.1"
tokio-test = "0.4.4"
