[project]
name = "pypi-jump-to"
version = "1.0.0"
description = "pjt (pypi-jump-to) - a quick navigation tool for the PyPI packages."
readme = "README.md"
authors = [{ name = "pivoshenko", email = "volodymyr.pivoshenko@gmail.com" }]
requires-python = ">=3.9"
dependencies = []

[project.scripts]
pypi-jump-to = "pypi_jump_to:main"

[tool.maturin]
module-name = "pypi_jump_to._core"
python-packages = ["pypi_jump_to"]
python-source = "src"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
