[project]
authors = [{ name = "Volodymyr Pivoshenko", email = "volodymyr.pivoshenko@gmail.com" }]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = []
description = "pypi-jump-to (pjt) - a quick navigation tool for the PyPI packages."
keywords = [
  "cli",
  "command-line-tool",
  "cross-platform",
  "hacktoberfest",
  "index",
  "jump",
  "packages",
  "pip",
  "productivity",
  "pypi",
  "python",
  "search",
  "shortcuts"
]
license = { text = "MIT" }
maintainers = [{ name = "Volodymyr Pivoshenko", email = "volodymyr.pivoshenko@gmail.com" }]
name = "pypi-jump-to"
readme = "README.md"
requires-python = ">=3.9"
version = "1.0.0"

[project.scripts]
pypi-jump-to = "pypi_jump_to:main"

[project.urls]
Homepage = "https://github.com/pivoshenko/pypi-jump-to"
Repository = "https://github.com/pivoshenko/pypi-jump-to"

[build-system]
build-backend = "maturin"
requires = ["maturin>=1.0,<2.0"]

[tool.maturin]
module-name = "pypi_jump_to._core"
python-packages = ["pypi_jump_to"]
python-source = "src"

[dependency-groups]
formatters = ["pyupgrade>=3.20.0", "ruff>=0.12.2"]
linters = ["mypy>=1.16.1", "ruff>=0.12.2"]
tests = [
  "pytest==7.4.4",
  "pytest-cov>=6.2.1",
  "pytest-lazy-fixture>=0.6.3",
  "pytest-mock>=3.14.1",
  "pytest-sugar>=1.0.0"
]

[tool.mypy]
namespace_packages = true
python_version = "3.13"
show_error_codes = true
strict = true
warn_unused_configs = true

[tool.pytest.ini_options]
addopts = ["--color=yes"]
testpaths = ["."]

[tool.ruff]
fix = true
line-length = 100
target-version = "py313"
unsafe-fixes = true

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"

[tool.ruff.lint]
ignore = ["COM812", "D202", "D203", "D213"]
select = ["ALL"]

[tool.ruff.lint.isort]
force-single-line = true
from-first = false
length-sort-straight = true
lines-after-imports = 2
lines-between-types = 1
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
